# docgen

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: docgen.toml
docs/themes/: default.tex
examples/default/: default.tex  docgen.toml
include/: cmds.h  const.h  const.hh
src/: cmds.cc  const.cc  export.cc  main.cc  utils.cc
